[tool.poetry]
name = "kafka"
version = "0.1.0"
description = ""
authors = ["sawaca96 <sawaca96@hanmail.net>"]

[tool.poetry.dependencies]
python = "^3.7"
aiokafka = "^0.7.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
